fix addresses would line up with wrong building on narrow

--- a/tx_elevators/static/tx_elevators/css/tx_elevators.css
+++ b/tx_elevators/static/tx_elevators/css/tx_elevators.css
@@ -23,6 +23,10 @@ body > header {
   list-style: upper-alpha;
 }
 
+#nearest li {
+  clear: right;
+}
+
 
 .bin h4 {
   border-bottom: 1px solid #ddd;
